--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ggj16",
-  "productName": "GGJ 16",
+  "productName": "To The End",
   "version": "0.1.0",
   "main": "main.js",
   "scripts": {
