--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ggj16",
-  "productName": "To The End",
+  "name": "to-the-end",
+  "productName": "ToTheEnd",
   "version": "0.1.0",
   "main": "main.js",
   "scripts": {
