--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
+    "test": "npm run lint",
+    "lint": "eslint .",
     "clean": "rm -rf ./build",
     "clean:linux": "rm -rf ./build/linux",
     "clean:darwin": "rm -rf ./build/darwin",
@@ -20,7 +22,8 @@
   },
   "devDependencies": {
     "electron-packager": "^5.2.1",
-    "electron-prebuilt": "^0.36.6"
+    "electron-prebuilt": "^0.36.6",
+    "eslint": "^1.10.3"
   },
   "dependencies": {
     "noble": "^1.3.0",
