--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "main": "main.js",
   "scripts": {
-    "start": "electron main.js",
+    "start": "NODE_ENV=development electron main.js",
     "test": "npm run lint",
     "lint": "eslint .",
     "clean": "rm -rf ./build",
