--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "main": "main.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development electron main.js",
-    "test": "npm run lint",
-    "lint": "eslint .",
     "clean": "rm -rf ./build",
     "clean:linux": "rm -rf ./build/linux",
     "clean:darwin": "rm -rf ./build/darwin",
@@ -23,8 +21,7 @@
   "devDependencies": {
     "cross-env": "^1.0.7",
     "electron-packager": "^5.2.1",
-    "electron-prebuilt": "^0.36.6",
-    "eslint": "^1.10.3"
+    "electron-prebuilt": "^0.36.6"
   },
   "dependencies": {
     "noble": "^1.3.0",
